@@ -23,17 +23,23 @@ package de.unijena.bioinf.ms.middleware.service.projects;
 import de.unijena.bioinf.ChemistryBase.chem.MolecularFormula;
 import de.unijena.bioinf.ChemistryBase.chem.PrecursorIonType;
 import de.unijena.bioinf.ChemistryBase.chem.RetentionTime;
+import de.unijena.bioinf.ChemistryBase.jobs.SiriusJobs;
 import de.unijena.bioinf.ChemistryBase.ms.DetectedAdducts;
-import de.unijena.bioinf.ChemistryBase.ms.*;
+import de.unijena.bioinf.ChemistryBase.ms.Peak;
+import de.unijena.bioinf.ChemistryBase.ms.Spectrum;
 import de.unijena.bioinf.ChemistryBase.ms.ft.FTree;
 import de.unijena.bioinf.ChemistryBase.ms.utils.SimpleSpectrum;
+import de.unijena.bioinf.ChemistryBase.utils.DataQuality;
 import de.unijena.bioinf.ChemistryBase.utils.Utils;
 import de.unijena.bioinf.babelms.json.FTJsonWriter;
 import de.unijena.bioinf.chemdb.FingerprintCandidate;
+import de.unijena.bioinf.jjobs.Partition;
+import de.unijena.bioinf.jjobs.TinyBackgroundJJob;
 import de.unijena.bioinf.ms.gui.configs.ColorGenerator;
+import de.unijena.bioinf.ms.middleware.Pages;
+import de.unijena.bioinf.ms.middleware.model.annotations.*;
 import de.unijena.bioinf.ms.middleware.model.annotations.CanopusPrediction;
 import de.unijena.bioinf.ms.middleware.model.annotations.FormulaCandidate;
-import de.unijena.bioinf.ms.middleware.model.annotations.*;
 import de.unijena.bioinf.ms.middleware.model.compounds.Compound;
 import de.unijena.bioinf.ms.middleware.model.compounds.CompoundImport;
 import de.unijena.bioinf.ms.middleware.model.compute.InstrumentProfile;
@@ -41,17 +47,16 @@ import de.unijena.bioinf.ms.middleware.model.features.*;
 import de.unijena.bioinf.ms.middleware.model.spectra.AnnotatedSpectrum;
 import de.unijena.bioinf.ms.middleware.model.spectra.Spectrums;
 import de.unijena.bioinf.ms.middleware.model.statistics.FoldChange;
+import de.unijena.bioinf.ms.middleware.model.statistics.Statistics;
 import de.unijena.bioinf.ms.middleware.model.statistics.StatisticsTable;
 import de.unijena.bioinf.ms.middleware.model.statistics.StatisticsType;
-import de.unijena.bioinf.ms.middleware.model.tags.Tag;
-import de.unijena.bioinf.ms.middleware.model.tags.TagDefinition;
-import de.unijena.bioinf.ms.middleware.model.tags.TagDefinitionImport;
-import de.unijena.bioinf.ms.middleware.model.tags.TagGroup;
+import de.unijena.bioinf.ms.middleware.model.tags.*;
 import de.unijena.bioinf.ms.middleware.service.annotations.AnnotationUtils;
 import de.unijena.bioinf.ms.middleware.service.search.SearchService;
+import de.unijena.bioinf.ms.middleware.service.search.dynamic.Taggable;
 import de.unijena.bioinf.ms.persistence.model.core.QualityReport;
-import de.unijena.bioinf.ms.persistence.model.core.feature.Feature;
 import de.unijena.bioinf.ms.persistence.model.core.feature.*;
+import de.unijena.bioinf.ms.persistence.model.core.feature.Feature;
 import de.unijena.bioinf.ms.persistence.model.core.networks.AdductNetwork;
 import de.unijena.bioinf.ms.persistence.model.core.networks.AdductNode;
 import de.unijena.bioinf.ms.persistence.model.core.run.*;
@@ -79,7 +84,7 @@ import it.unimi.dsi.fastutil.floats.FloatList;
 import it.unimi.dsi.fastutil.ints.IntArrayList;
 import it.unimi.dsi.fastutil.ints.IntList;
 import it.unimi.dsi.fastutil.longs.*;
-import jakarta.persistence.Id;
+import lombok.Getter;
 import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.time.StopWatch;
@@ -91,8 +96,6 @@ import org.slf4j.LoggerFactory;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
-import org.springframework.util.ReflectionUtils;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.awt.*;
@@ -100,13 +103,16 @@ import java.io.IOException;
 import java.io.StringWriter;
 import java.util.*;
 import java.util.List;
-import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.BiFunction;
 import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import static de.unijena.bioinf.ChemistryBase.utils.Utils.LARGE_BATCH_SIZE;
+import static de.unijena.bioinf.ms.middleware.Pages.*;
+import static de.unijena.bioinf.ms.middleware.service.annotations.AnnotationUtils.convertToFeatureQuality;
+import static de.unijena.bioinf.ms.middleware.service.annotations.AnnotationUtils.convertToQualityMap;
 import static org.springframework.http.HttpStatus.*;
 
 
@@ -120,6 +126,7 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
     @NotNull
     private final NoSQLProjectSpaceManager projectSpaceManager;
 
+    @Getter
     private final SearchService searchService;
 
     private final @NotNull BiFunction<Project<?>, String, Boolean> computeStateProvider;
@@ -131,21 +138,224 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
         this.computeStateProvider = computeStateProvider;
         this.searchService = searchService;
 
-        if (searchService != null) {
-            storage().onInsert(de.unijena.bioinf.ms.persistence.model.core.tags.TagDefinition.class, tagDef -> searchService.addTagDefinition(projectId, tagDef));
-            storage().onRemove(de.unijena.bioinf.ms.persistence.model.core.tags.TagDefinition.class, tagDef -> searchService.removeTagDefinition(projectId, tagDef.getTagName()));
-            searchService.indexProject(projectId, projectSpaceManager.getProject());
+        //todo this is protoype testing code. move to a better place real implementation
+        if (this.searchService != null) {
+            synchronized (this.searchService) {
+                try {
+                    //todo fix wildcard search
+                    //todo fix event actions so that new tags are added to features
+                    //todo think whether we want store tags on the tagged object because we have lucene index..
+
+                    StopWatch stopWatch = new StopWatch();
+                    stopWatch.start();
+                    searchService.openOrCreateProjectIndex(this);
+                    System.out.println("Open/Create Index took: " + stopWatch);
+                    stopWatch.reset();
+                    stopWatch.start();
+
+                    createSearchIndex(false);
+
+                    //handle tag valuetype cache
+                    storage().onInsert(de.unijena.bioinf.ms.persistence.model.core.tags.TagDefinition.class,
+                            tagDef -> searchService.addTagValueType(projectId, tagDef.getTagName(), tagDef.getValueType()));
+                    storage().onRemove(de.unijena.bioinf.ms.persistence.model.core.tags.TagDefinition.class,
+                            tagDef -> searchService.removeTagValueType(projectId, tagDef.getTagName()));
+
+
+                } catch (IOException e) {
+                    log.error("Error while initializing project space index. Closing index.", e);
+                    searchService.closeProjectIndex(projectId);
+                }
+            }
         }
     }
 
+    //todo should we be able to cancel this?
+    //todo does parallelization improve performance?
+
+    @SneakyThrows
+    @Override
+    public void createSearchIndex(boolean force) {
+        if (searchService != null) {
+            synchronized (searchService) {
+                StopWatch stopWatch = StopWatch.createStarted();
+                System.out.println();
+                System.out.println("Creating new search index...");
+                if (force)
+                    searchService.clearIndex(this);
+
+                //todo finde good page size.
+                //load feature index in pages to have content memory consumption
+                if (searchService.isEmpty(projectId, AlignedFeature.class)) {
+                    Pages.forEach(
+                            pageable -> Utils.withTimeR("===> Loaded feature page for Indexing", w -> findAlignedFeatures(pageable, false, AlignedFeature.INDEXED_OPT_FIELDS)),
+                            page -> Utils.withTime("===> Added feature page to Index", w -> searchService.addDocuments(projectId, page.getContent()))
+                    );
+
+                    System.out.println("Indexing Features took: " + stopWatch);
+                    stopWatch.reset();
+                    stopWatch.start();
+                }
+
+                //load Run index in pages to have content memory consumption
+                if (searchService.isEmpty(projectId, Run.class)) {
+                    Pages.forEach(
+                            pageable -> findRuns(pageable, Run.OptField.tags),
+                            page -> searchService.addDocuments(projectId, page.getContent())
+                    );
+
+                    System.out.println("Indexing Runs took: " + stopWatch);
+                    stopWatch.reset();
+                    stopWatch.start();
+                }
+
+                //load compound index
+                //todo remuse features.
+                //todo we need to store analyzers and point configs.
+//                Page<Compound> compounds = findCompounds(Pageable.unpaged(), Compound.OptField.tags);
+//                if (compounds.hasContent())
+//                    searchService.getSearchIndexWriter().addBeans(projectId,
+//                            compounds.getContent());
+
+            }
+        }
+    }
+
+
+    /**
+     * Add newly imported data into search index.
+     * Data to index will be requested from project based on the given aligned feature ids (e.g. runs, compounds, results)
+     *
+     * @param alignedFeaturesToUpdate ids of the features to be added.
+     */
+    @Override
+    public void addToSearchIndex(@Nullable Collection<String> alignedFeaturesToUpdate, @Nullable Collection<String> runIds) {
+        addToSearchIndexLongIds(
+                alignedFeaturesToUpdate == null ? null : alignedFeaturesToUpdate.stream().filter(Objects::nonNull).map(Long::parseLong).toList(),
+                runIds == null ? null : runIds.stream().filter(Objects::nonNull).map(Long::parseLong).toList()
+
+        );
+    }
+
+    @SneakyThrows
+    public void addToSearchIndexLongIds(@Nullable Collection<Long> alignedFeaturesToUpdate, @Nullable Collection<Long> runIds) {
+
+        if (searchService != null) {
+            synchronized (searchService) {
+                StopWatch stopWatch = StopWatch.createStarted();
+                System.out.println();
+                System.out.println("Inserting imported data...");
+
+
+                //Handle FEATURES
+                if (Utils.notNullOrEmpty(alignedFeaturesToUpdate)) {
+                    Partition<Long> partition = Partition.ofSize(alignedFeaturesToUpdate.stream().sorted().toList(), LARGE_BATCH_SIZE);
+                    for (List<Long> ids : partition) {
+                        List<AlignedFeature> alfs = findAlignedFeaturesByIds(ids, false, EnumSet.of(AlignedFeature.OptField.qualities));
+                        searchService.addDocuments(projectId, alfs);
+                    }
+                }
+
+                //Handle COMPOUNDS
+                //todo IMPLEMENT!
+
+                //Handle Runs
+                if (Utils.notNullOrEmpty(runIds)) {
+                    List<Run> runsToUpdate = storage().findStr(Filter.where("runId").in(runIds.stream().sorted().toArray(Long[]::new)), LCMSRun.class)
+                            .map(run -> convertToApiRun(run, EnumSet.of(Run.OptField.tags))) //tag might have been added during preprocessing.
+                            .toList();
+                    searchService.addDocuments(projectId, runsToUpdate);
+                }
+
+                System.out.println("Indexing imported Data took: " + stopWatch);
+            }
+        }
+
+    }
+
+
+    /**
+     * Add newly imported data into search index.
+     * Data to index will be requested from project based on the given aligned feature ids (e.g. runs, compounds, results)
+     *
+     * @param alignedFeaturesToUpdate ids of the features to be added.
+     */
+    @Override
+    public void updateSearchIndex(Collection<String> alignedFeaturesToUpdate) {
+        updateSearchIndexLongIds(alignedFeaturesToUpdate.stream().filter(Objects::nonNull).map(Long::parseLong).toList());
+
+    }
+
+    @SneakyThrows
+    public void updateSearchIndexLongIds(Collection<Long> alignedFeaturesToUpdate) {
+        if (searchService != null) {
+            synchronized (searchService) {
+                StopWatch stopWatch = StopWatch.createStarted();
+                System.out.println();
+                System.out.println("Updating search index...");
+
+                LongList idsToUpdate = alignedFeaturesToUpdate.stream().sorted().collect(Collectors.toCollection(LongArrayList::new));
+
+                // request results from db.
+                if (!idsToUpdate.isEmpty()) {
+                    Partition<Long> partition = Partition.ofSize(idsToUpdate, LARGE_BATCH_SIZE);
+                    for (List<Long> ids : partition) {
+                        List<AlignedFeature> alfs = Utils.withTimeRIo("===> Loaded feature page for Indexing", w ->
+                                findAlignedFeaturesByIds(ids, false, AlignedFeature.INDEXED_OPT_FIELDS)
+                        );
+                        Utils.withTime("===> Updated features from page in Index", w -> searchService.updateDocuments(projectId, alfs));
+                    }
+                }
+                System.out.println("Updating search index took: " + stopWatch);
+            }
+        }
+
+    }
+
+    @Override
+    public void removeFromSearchIndex(@Nullable Collection<String> alignedFeaturesIds, @Nullable Collection<String> compoundIds, @Nullable Collection<String> runIds) {
+        removeFromSearchIndexLongIds(
+                alignedFeaturesIds == null ? null : alignedFeaturesIds.stream().filter(Objects::nonNull).map(Long::parseLong).toList(),
+                compoundIds == null ? null : compoundIds.stream().filter(Objects::nonNull).map(Long::parseLong).toList(),
+                runIds == null ? null : runIds.stream().filter(Objects::nonNull).map(Long::parseLong).toList()
+        );
+    }
+
+    @SneakyThrows
+    public void removeFromSearchIndexLongIds(@Nullable Collection<Long> alignedFeaturesIds, @Nullable Collection<Long> compoundIds, @Nullable Collection<Long> runIds) {
+        if (searchService != null) {
+            synchronized (searchService) {
+                StopWatch stopWatch = StopWatch.createStarted();
+                System.out.println();
+                System.out.println("Removing deleted data from index...");
+
+                //Handle FEATURES
+                if (Utils.notNullOrEmpty(alignedFeaturesIds))
+                    searchService.removeDocuments(projectId, alignedFeaturesIds);
+                if (Utils.notNullOrEmpty(compoundIds))
+                    searchService.removeDocuments(projectId, compoundIds);
+                if (Utils.notNullOrEmpty(runIds))
+                    searchService.removeDocuments(projectId, runIds);
+
+                System.out.println("Removing deleted data from index took: " + stopWatch);
+            }
+        }
+    }
+
+
     //using private methods instead of references for easier refactoring or changes.
     // compiler will inline the method call since projectmanager is final.
-    private Database<?> storage() {
+    public Database<?> storage() {
         return projectSpaceManager.getProject().getStorage();
     }
 
-    private SiriusProjectDocumentDatabase<? extends Database<?>> project() {
+    public SiriusProjectDocumentDatabase<? extends Database<?>> project() {
         return projectSpaceManager.getProject();
+    }
+
+    @Override
+    public @NotNull String getSystemUID() {
+        return projectSpaceManager.getProject().getStorage().systemUID();
     }
 
     @Override
@@ -830,75 +1040,6 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
         return Optional.of(traceSet);
     }
 
-    private Pair<String[], Database.SortOrder[]> sort(Sort sort, Pair<String, Database.SortOrder> defaults, Function<String, String> translator) {
-        if (sort == null || sort.isEmpty() || sort == Sort.unsorted())
-            return Pair.of(new String[]{defaults.getLeft()}, new Database.SortOrder[]{defaults.getRight()});
-
-        List<String> properties = new ArrayList<>();
-        List<Database.SortOrder> orders = new ArrayList<>();
-        sort.stream().forEach(s -> {
-            properties.add(translator.apply(s.getProperty()));
-            orders.add(s.getDirection().isAscending() ? Database.SortOrder.ASCENDING : Database.SortOrder.DESCENDING);
-        });
-        return Pair.of(properties.toArray(String[]::new), orders.toArray(Database.SortOrder[]::new));
-    }
-
-    private Pair<String[], Database.SortOrder[]> sortRun(Sort sort) {
-        return sort(sort, Pair.of("name", Database.SortOrder.ASCENDING), Function.identity());
-    }
-
-    private Pair<String[], Database.SortOrder[]> sortCompound(Sort sort) {
-        return sort(sort, Pair.of("rt.middle", Database.SortOrder.ASCENDING), s -> switch (s) {
-            case "rtStartSeconds" -> "rt.start";
-            case "rtEndSeconds" -> "rt.end";
-            default -> s;
-        });
-    }
-
-    private Pair<String[], Database.SortOrder[]> sortFeature(Sort sort) {
-        return sort(sort, Pair.of("retentionTime.middle", Database.SortOrder.ASCENDING), s -> switch (s) {
-            case "rtStartSeconds" -> "retentionTime.start";
-            case "rtEndSeconds" -> "retentionTime.end";
-            case "ionMass" -> "averageMass";
-            default -> s;
-        });
-    }
-
-    private Pair<String[], Database.SortOrder[]> sortMatch(Sort sort) {
-        return sort(sort, Pair.of("searchResult.rank", Database.SortOrder.ASCENDING), s -> switch (s) {
-            case "rank" -> "searchResult.rank";
-            case "similarity" -> "searchResult.similarity.similarity";
-            case "sharedPeaks" -> "searchResult.similarity.sharedPeaks";
-            default -> s;
-        });
-    }
-
-    private Filter spectralMatchFilter(String alignedFeatureId, int minSharedPeaks, double minSimilarity) {
-        long longId = Long.parseLong(alignedFeatureId);
-        return Filter.and(
-                Filter.where("alignedFeatureId").eq(longId),
-                Filter.where("searchResult.similarity.sharedPeaks").gte(minSharedPeaks),
-                Filter.where("searchResult.similarity.similarity").gte(minSimilarity)
-        );
-    }
-
-    private Filter spectralMatchInchiFilter(String alignedFeatureId, String candidateInchi, int minSharedPeaks, double minSimilarity) {
-        long longId = Long.parseLong(alignedFeatureId);
-        return Filter.and(
-                Filter.where("alignedFeatureId").eq(longId),
-                Filter.where("searchResult.candidateInChiKey").eq(candidateInchi),
-                Filter.where("searchResult.similarity.sharedPeaks").gte(minSharedPeaks),
-                Filter.where("searchResult.similarity.similarity").gte(minSimilarity)
-        );
-    }
-
-    private Pair<String[], Database.SortOrder[]> sortFormulaCandidate(Sort sort) {
-        return sort(sort, Pair.of("formulaRank", Database.SortOrder.ASCENDING), Function.identity());
-    }
-
-    private Pair<String[], Database.SortOrder[]> sortStructureMatch(Sort sort) {
-        return sort(sort, Pair.of("structureRank", Database.SortOrder.ASCENDING), Function.identity());
-    }
 
     private Compound convertToApiCompound(de.unijena.bioinf.ms.persistence.model.core.Compound compound,
                                           boolean msDataSearchPrepared,
@@ -959,7 +1100,7 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
                 .map(f -> convertToProjectFeature(f, profile))
                 .filter(Objects::nonNull).toList();
 
-        if (features.isEmpty()){
+        if (features.isEmpty()) {
             log.warn("Compound named '{}' does not contains a single supported feature. Skipping!", compoundImport.getName());
             return null;
         }
@@ -990,7 +1131,7 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
     }
 
     @Nullable
-    private AlignedFeatures convertToProjectFeature(FeatureImport featureImport, @Nullable InstrumentProfile profile){
+    private AlignedFeatures convertToProjectFeature(FeatureImport featureImport, @Nullable InstrumentProfile profile) {
         try {
             AlignedFeatures.AlignedFeaturesBuilder<?, ?> builder = AlignedFeatures.builder()
                     .name(featureImport.getName())
@@ -1017,29 +1158,38 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
         }
     }
 
-    private AlignedFeature convertToApiFeature(AlignedFeatures features, boolean msDataSearchPrepared, @NotNull EnumSet<AlignedFeature.OptField> optFields) {
-        final String fid = String.valueOf(features.getAlignedFeatureId());
+
+    public AlignedFeature convertToApiFeature(AlignedFeatures feature, boolean msDataAsCosineQuery) {
+        return convertToApiFeature(feature, msDataAsCosineQuery, EnumSet.noneOf(AlignedFeature.OptField.class));
+    }
+
+    public AlignedFeature convertToApiFeature(AlignedFeatures feature, boolean msDataSearchPrepared, @NotNull EnumSet<AlignedFeature.OptField> optFields) {
+        final String fid = String.valueOf(feature.getAlignedFeatureId());
         AlignedFeature.AlignedFeatureBuilder builder = AlignedFeature.builder()
                 .alignedFeatureId(fid)
-                .name(features.getName())
-                .externalFeatureId(features.getExternalFeatureId())
-                .compoundId(features.getCompoundId() == null ? null : features.getCompoundId().toString())
-                .ionMass(features.getAverageMass())
-                .quality(features.getDataQuality())
-                .hasMs1(features.isHasMs1())
-                .hasMsMs(features.isHasMsMs())
+                .name(feature.getName())
+                .externalFeatureId(feature.getExternalFeatureId())
+                .compoundId(feature.getCompoundId() == null ? null : String.valueOf(feature.getCompoundId()))
+                .ionMass(feature.getAverageMass())
+                .quality(feature.getDataQuality() == null ? DataQuality.NOT_APPLICABLE : feature.getDataQuality())
+                .hasMs1(feature.isHasMs1())
+                .hasMsMs(feature.isHasMsMs())
                 .computing(computeStateProvider.apply(this, fid))
-                .charge(features.getCharge());
-        if (features.getDetectedAdducts() != null) {
-            de.unijena.bioinf.ms.persistence.model.core.feature.DetectedAdducts adducts = features.getDetectedAdducts().clone();
+                .charge(feature.getCharge());
+        if (feature.getDetectedAdducts() != null) {
+            de.unijena.bioinf.ms.persistence.model.core.feature.DetectedAdducts adducts = feature.getDetectedAdducts().clone();
             adducts.removeAllWithSource(DetectedAdducts.Source.SPECTRAL_LIBRARY_SEARCH);
             adducts.removeAllWithSource(DetectedAdducts.Source.MS1_PREPROCESSOR); //todo do not remove if detection runs during import.
-            builder.detectedAdducts(adducts.getAllAdducts().stream().map(PrecursorIonType::toString)
-                    .collect(Collectors.toSet()));
+            @NotNull Set<String> cleanedAdducts = adducts.getAllAdducts().stream()
+                    .map(PrecursorIonType::toString)
+                    .collect(Collectors.toSet());
+            if (cleanedAdducts.isEmpty())
+                cleanedAdducts.add(PrecursorIonType.unknown(feature.getCharge()).toString());
+            builder.detectedAdducts(cleanedAdducts);
         } else {
-            builder.detectedAdducts(Set.of());
+            builder.detectedAdducts(Set.of(PrecursorIonType.unknown(feature.getCharge()).toString()));
         }
-        RetentionTime rt = features.getRetentionTime();
+        RetentionTime rt = feature.getRetentionTime();
         if (rt != null) {
             if (rt.isInterval() && Double.isFinite(rt.getStartTime()) && Double.isFinite(rt.getEndTime())) {
                 builder.rtStartSeconds(rt.getStartTime());
@@ -1051,28 +1201,68 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
                 builder.rtEndSeconds(rt.getMiddleTime());
             }
         }
+        return annotateApiFeature(feature.getAlignedFeatureId(), builder.build(), msDataSearchPrepared, optFields);
+    }
+
+    @SneakyThrows
+    private AlignedFeature annotateApiFeature(long alignedFeatureId, AlignedFeature feature, boolean msDataSearchPrepared, @NotNull EnumSet<AlignedFeature.OptField> optFields) {
+        //todo: we could use computedSubtool to decide whether we have to request results at all...
 
         if (optFields.contains(AlignedFeature.OptField.msData)) {
-            project().fetchMsData(features);
-            features.getMSData().map(msd -> MsData.of(msd, msDataSearchPrepared)).ifPresent(builder::msData);
+            if (feature.getMsData() == null)
+                project().findByFeatureIdStr(alignedFeatureId, MSData.class).findAny()
+                        .map(msd -> MsData.of(msd, msDataSearchPrepared))
+                        .ifPresent(feature::setMsData);
+        } else {
+            feature.setMsData(null);
         }
-        if (optFields.contains(AlignedFeature.OptField.topAnnotations))
-            builder.topAnnotations(extractTopCsiNovoAnnotations(features.getAlignedFeatureId()));
-        else if (optFields.contains(AlignedFeature.OptField.topAnnotationsSummary)) {
-            builder.topAnnotations(extractTopAnnotationsSummary(features.getAlignedFeatureId()));
+
+        if (optFields.contains(AlignedFeature.OptField.topAnnotations)) {
+            feature.setTopAnnotations(extractTopCsiAnnotations(alignedFeatureId));
+        } else if (optFields.contains(AlignedFeature.OptField.topAnnotationsSummary)) { // fast confidence score retrieval without any additional data.
+            if (feature.getTopAnnotations() == null)
+                feature.setTopAnnotations(extractSearchIndexTopAnnotations(alignedFeatureId));
+        } else {
+            feature.setTopAnnotations(null);
         }
-        if (optFields.contains(AlignedFeature.OptField.topAnnotationsDeNovo))
-            builder.topAnnotationsDeNovo(extractTopDeNovoAnnotations(features.getAlignedFeatureId()));
-        if (optFields.contains(AlignedFeature.OptField.computedTools))
-            builder.computedTools(
-                    project().findByFeatureIdStr(features.getAlignedFeatureId(), ComputedSubtools.class)
-                            .findFirst().orElseGet(() -> ComputedSubtools.builder().build())
-            );
+
+        if (optFields.contains(AlignedFeature.OptField.topAnnotationsDeNovo)) {
+            if (feature.getTopAnnotationsDeNovo() == null)
+                feature.setTopAnnotationsDeNovo(extractTopDeNovoAnnotations(alignedFeatureId));
+        } else {
+            feature.setTopAnnotationsDeNovo(null);
+        }
+
+        if (optFields.contains(AlignedFeature.OptField.computedTools)) {
+            if (feature.getComputedTools() == null)
+                feature.setComputedTools(
+                        project().findByFeatureIdStr(alignedFeatureId, ComputedSubtools.class)
+                                .findFirst().orElseGet(() -> ComputedSubtools.builder().build())
+                );
+        } else {
+            feature.setComputedTools(null);
+        }
+
+        if (optFields.contains(AlignedFeature.OptField.qualities)) {
+            if (feature.getQualities() == null) {
+                if (feature.getQuality() == null || feature.getQuality() == DataQuality.NOT_APPLICABLE) {
+                    feature.setQualities(Map.of());
+                } else {
+                    feature.setQualities(convertToQualityMap(findQualityReportById(alignedFeatureId)));
+                }
+            }
+        } else {
+            feature.setQualities(null);
+        }
+
         if (optFields.contains(AlignedFeature.OptField.tags)) {
-            builder.tags(findTagsByObject(features.getClass(), features.getAlignedFeatureId())
-                    .collect(Collectors.toMap(Tag::getTagName, Function.identity())));
+            if (feature.getTags() == null)
+                feature.setTags(findTagsByObject(AlignedFeatures.class, alignedFeatureId)
+                        .collect(Collectors.toMap(Tag::getTagName, Function.identity())));
+        } else {
+            feature.setTags(null);
         }
-        return builder.build();
+        return feature;
     }
 
     private de.unijena.bioinf.ms.middleware.model.features.Feature convertToApiFeature0(Feature feature) {
@@ -1102,7 +1292,7 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
     }
 
     @SneakyThrows
-    private Run convertToApiRun(LCMSRun run, EnumSet<Run.OptField> optFields) {
+    public Run convertToApiRun(LCMSRun run, EnumSet<Run.OptField> optFields) {
         Run.RunBuilder builder = Run.builder()
                 .runId(Long.toString(run.getRunId()))
                 .name(run.getName());
@@ -1122,20 +1312,24 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
     }
 
     private Tag convertToApiTag(de.unijena.bioinf.ms.persistence.model.core.tags.Tag tag) {
-        return Tag.builder().tagName(tag.getTagName()).value(tag.getValueType().getFormatter().toFormattedGeneric(tag.getValue())).build();
+        return Tag.builder().tagName(tag.getTagName()).value(tag.getValueFormatted()).build();
     }
 
     @SneakyThrows
     private TagDefinition convertToApiDefinition(de.unijena.bioinf.ms.persistence.model.core.tags.TagDefinition projectDefinition) {
         ValueFormatter<?, ?> formatter = projectDefinition.getValueDefinition().getValueType().getFormatter();
+        ValueDefinition<?> valueDef = projectDefinition.getValueDefinition();
         return TagDefinition.builder()
                 .tagName(projectDefinition.getTagName())
                 .tagType(projectDefinition.getTagType())
+                .description(projectDefinition.getDescription())
                 .valueType(projectDefinition.getValueDefinition().getValueType())
-                .possibleValues(projectDefinition.getValueDefinition().getPossibleValues()
+                .possibleValues(valueDef.getPossibleValues()
                         .stream()
                         .map(formatter::toFormattedGeneric)
                         .collect(Collectors.toList()))
+                .minValue(formatter.toFormattedGeneric(valueDef.getMinValue()))
+                .maxValue(formatter.toFormattedGeneric(valueDef.getMaxValue()))
                 .build();
     }
 
@@ -1149,6 +1343,7 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
         return de.unijena.bioinf.ms.persistence.model.core.tags.TagDefinition.builder()
                 .tagName(tagDefinitionImport.getTagName())
                 .tagType(tagDefinitionImport.getTagType())
+                .description(tagDefinitionImport.getDescription())
                 .editable(editable)
                 .valueDefinition(new ValueDefinition<>(tagDefinitionImport.getValueType(),
                         psConverted,
@@ -1165,30 +1360,29 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
                 .build();
     }
 
-    private FoldChange convertToApiFoldChange(de.unijena.bioinf.ms.persistence.model.core.statistics.FoldChange.AlignedFeaturesFoldChange foldChange) {
-        return convertToApiFoldChange((de.unijena.bioinf.ms.persistence.model.core.statistics.FoldChange) foldChange)
-                .quantType(QuantRowType.FEATURES)
-                .build();
+    public static FoldChange convertToApiFoldChange(de.unijena.bioinf.ms.persistence.model.core.statistics.FoldChange.AlignedFeaturesFoldChange foldChange) {
+        return convertToApiFoldChange(foldChange, QuantRowType.FEATURES);
     }
 
-    private FoldChange convertToApiFoldChange(de.unijena.bioinf.ms.persistence.model.core.statistics.FoldChange.CompoundFoldChange foldChange) {
-        return convertToApiFoldChange((de.unijena.bioinf.ms.persistence.model.core.statistics.FoldChange) foldChange)
-                .quantType(QuantRowType.COMPOUNDS)
-                .build();
+    public static FoldChange convertToApiFoldChange(de.unijena.bioinf.ms.persistence.model.core.statistics.FoldChange.CompoundFoldChange foldChange) {
+        return convertToApiFoldChange(foldChange, QuantRowType.COMPOUNDS);
     }
 
-    private FoldChange.FoldChangeBuilder<?, ?> convertToApiFoldChange(de.unijena.bioinf.ms.persistence.model.core.statistics.FoldChange foldChange) {
+    private static FoldChange convertToApiFoldChange(de.unijena.bioinf.ms.persistence.model.core.statistics.FoldChange foldChange, QuantRowType quantRowType) {
         return FoldChange.builder()
+                .quantType(quantRowType)
                 .objectId(Long.toString(foldChange.getForeignId()))
                 .leftGroup(foldChange.getLeftGroup())
                 .rightGroup(foldChange.getRightGroup())
                 .aggregation(foldChange.getAggregation())
                 .quantification(foldChange.getQuantification())
-                .foldChange(foldChange.getFoldChange());
+                .foldChange(foldChange.getFoldChange())
+                .build();
     }
 
 
-    private FeatureAnnotations extractTopCsiNovoAnnotations(long longAFIf) {
+    @SneakyThrows
+    private FeatureAnnotations extractTopCsiAnnotations(long longAFIf) {
         return extractTopAnnotations(longAFIf, CsiStructureMatch.class);
     }
 
@@ -1197,16 +1391,36 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
     }
 
     @SneakyThrows
-    private FeatureAnnotations extractTopAnnotationsSummary(long longAFIf) {
+    private FeatureAnnotations extractSearchIndexTopAnnotations(long longAFIf) {
+        return extractSearchIndexTopAnnotations(longAFIf, storage().getByPrimaryKey(longAFIf, CsiStructureSearchResult.class)
+                .orElse(null));
+    }
+
+    @SneakyThrows
+    private FeatureAnnotations extractSearchIndexTopAnnotations(long longAFIf, @Nullable CsiStructureSearchResult structureSearchResult) {
         final FeatureAnnotations cSum = new FeatureAnnotations();
 
-        storage().getByPrimaryKey(longAFIf, CsiStructureSearchResult.class).ifPresent(structureSearchResult -> {
+        de.unijena.bioinf.ms.persistence.model.sirius.FormulaCandidate formulaCandidate = null;
+
+        if (structureSearchResult != null) {
             cSum.setConfidenceExactMatch(structureSearchResult.getConfidenceExact());
             cSum.setConfidenceApproxMatch(structureSearchResult.getConfidenceApprox());
             cSum.setExpansiveSearchState(structureSearchResult.getExpansiveSearchConfidenceMode());
             cSum.setSpecifiedDatabases(structureSearchResult.getSpecifiedDatabases());
             cSum.setExpandedDatabases(structureSearchResult.getExpandedDatabases());
-        });
+            cSum.setMatchedDatabases(structureSearchResult.getMatchedDatabases());
+
+            StructureMatch structureMatch = project().findTopStructureMatchByFeatureId(longAFIf, CsiStructureMatch.class).orElse(null);
+
+            formulaCandidate = storage().getByPrimaryKey(structureMatch.getFormulaId(), de.unijena.bioinf.ms.persistence.model.sirius.FormulaCandidate.class)
+                    .orElse(null);
+        }
+
+        if (formulaCandidate == null)
+            formulaCandidate = project().findTopFormulaCandidateByFeatureId(longAFIf).orElse(null);
+
+        if (formulaCandidate != null)
+            cSum.setFormulaAnnotation(convertFormulaCandidate(formulaCandidate));
 
         return cSum;
     }
@@ -1226,6 +1440,7 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
             cSum.setExpansiveSearchState(structureSearchResult.getExpansiveSearchConfidenceMode());
             cSum.setSpecifiedDatabases(structureSearchResult.getSpecifiedDatabases());
             cSum.setExpandedDatabases(structureSearchResult.getExpandedDatabases());
+            cSum.setMatchedDatabases(structureSearchResult.getMatchedDatabases());
         }
 
         de.unijena.bioinf.ms.persistence.model.sirius.FormulaCandidate formulaCandidate;
@@ -1237,6 +1452,7 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
         if (structureMatch != null) {
             formulaCandidate = storage().getByPrimaryKey(structureMatch.getFormulaId(), de.unijena.bioinf.ms.persistence.model.sirius.FormulaCandidate.class)
                     .orElseThrow();
+
             //set Structure match
             cSum.setStructureAnnotation(convertStructureMatch(structureMatch, EnumSet.of(StructureCandidateScored.OptField.dbLinks, StructureCandidateScored.OptField.libraryMatches)));
         } else {
@@ -1255,7 +1471,7 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
 
     private static final EnumSet<FormulaCandidate.OptField> needTree = EnumSet.of(
             FormulaCandidate.OptField.fragmentationTree, FormulaCandidate.OptField.annotatedSpectrum,
-            FormulaCandidate.OptField.isotopePattern, FormulaCandidate.OptField.lipidAnnotation,
+            FormulaCandidate.OptField.isotopePattern,
             FormulaCandidate.OptField.statistics
     );
 
@@ -1275,7 +1491,8 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
                 .siriusScore(candidate.getSiriusScore())
                 .isotopeScore(candidate.getIsotopeScore())
                 .treeScore(candidate.getTreeScore())
-                .zodiacScore(candidate.getZodiacScore());
+                .zodiacScore(candidate.getZodiacScore())
+                .lipidAnnotation(AnnotationUtils.asLipidAnnotation(candidate.getLipidSpecies()));
 
         //todo We need the scores in the gui without the tree -> do we want to store stats separately from the tree?
         final FTree ftree = optFields.stream().anyMatch(needTree::contains)
@@ -1292,8 +1509,6 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
             }
             if (optFields.contains(FormulaCandidate.OptField.fragmentationTree))
                 builder.fragmentationTree(FragmentationTree.fromFtree(ftree));
-            if (optFields.contains(FormulaCandidate.OptField.lipidAnnotation))
-                builder.lipidAnnotation(AnnotationUtils.asLipidAnnotation(ftree));
             if (optFields.contains(FormulaCandidate.OptField.annotatedSpectrum))
                 //todo this is not efficient an loads spectra a second time as well as the whole experiment. we need no change spectra annotation code to improve this.
                 builder.annotatedSpectrum(findAnnotatedMsMsSpectrum(-1, null, candidate.getFormulaId(), candidate.getAlignedFeatureId(), msDataSearchPrepared));
@@ -1326,12 +1541,42 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
 
     @SneakyThrows
     @Override
-    public Page<Compound> findCompounds(Pageable pageable,
+    public Page<Compound> findCompounds(@Nullable String searchQuery,
+                                        Pageable pageable,
                                         boolean msDataSearchPrepared,
                                         @NotNull EnumSet<Compound.OptField> optFields,
                                         @NotNull EnumSet<AlignedFeature.OptField> optFeatureFields) {
+        if (searchQuery == null || searchQuery.isBlank())
+            return findCompounds(pageable, msDataSearchPrepared, optFields, optFeatureFields);
+
+        throw new ResponseStatusException(METHOD_NOT_ALLOWED, "Searching compounds is not yet supported!");
+
+
+        /*
+        if (searchService == null)
+            throw new ResponseStatusException(SERVICE_UNAVAILABLE, "Cannot perform search query. Search service not available!");
+
+        Page<Compound> compounds = searchService.search(projectId, searchQuery, pageable, Compound.class);
+
+
+       if (!EnumSet.of(Compound.OptField.tags).containsAll(optFields)) {
+            List<Compound> cps = storage().findStr(Filter.where("compoundId").in(compounds.stream().map(Compound::getCompoundId).map(Long::parseLong).toArray(Long[]::new)), de.unijena.bioinf.ms.persistence.model.core.Compound.class)
+                    .map(r -> convertToApiCompound(r, optFields, optFeatureFields)).toList();
+            compounds = new PageImpl<>(cps, compounds.getPageable(), compounds.getTotalElements());
+        }
+
+        return compounds;*/
+    }
+
+    @SneakyThrows
+    @Override
+    public Page<Compound> findCompounds(Pageable pageable,
+                                        boolean msDataSearchPrepared,
+                                        @NotNull EnumSet<Compound.OptField> optFields,
+                                        @NotNull EnumSet<AlignedFeature.OptField> optFeatureFields
+    ) {
         Stream<de.unijena.bioinf.ms.persistence.model.core.Compound> stream =
-                findPageStr(de.unijena.bioinf.ms.persistence.model.core.Compound.class, pageable, this::sortCompound)
+                findPageStr(storage(), de.unijena.bioinf.ms.persistence.model.core.Compound.class, pageable)
                         .peek(project()::fetchAdductFeatures);
 
         if (optFeatureFields.contains(AlignedFeature.OptField.msData))
@@ -1342,6 +1587,20 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
         long total = storage().countAll(de.unijena.bioinf.ms.persistence.model.core.Compound.class);
 
         return new PageImpl<>(compounds, pageable, total);
+    }
+
+    @SneakyThrows
+    @Override
+    public Page<Compound> findCompoundsByGroup(@NotNull String groupName,
+                                               Pageable pageable,
+                                               boolean msDataSearchPrepared,
+                                               @NotNull EnumSet<Compound.OptField> optFields,
+                                               @NotNull EnumSet<AlignedFeature.OptField> optFeatureFields
+    ) {
+        Optional<de.unijena.bioinf.ms.persistence.model.core.tags.TagGroup> tagGroup = storage().findStr(Filter.where("groupName").eq(groupName), de.unijena.bioinf.ms.persistence.model.core.tags.TagGroup.class).findFirst();
+        if (tagGroup.isEmpty())
+            return Page.empty(pageable);
+        return findCompounds(tagGroup.get().getLuceneQuery(), pageable, msDataSearchPrepared, optFields, optFeatureFields);
     }
 
     private void setProjectTypeOrThrow(SiriusProjectDocumentDatabase<? extends Database<?>> ps) {
@@ -1389,6 +1648,8 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
         }).orElse(ProjectSourceFormats.fromDirectImports(importSource));
         project().upsertProjectSourceFormats(format);
 
+        //todo fire import api event
+        //todo handle index update
         return dbc.stream().map(c -> convertToApiCompound(c, false, optFields, optFieldsFeatures)).toList();
     }
 
@@ -1411,72 +1672,232 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
     @Override
     public void deleteCompoundById(String compoundId) {
         project().cascadeDeleteCompound(Long.parseLong(compoundId));
+        //todo update index.
     }
 
 
-    @SneakyThrows
     @Override
     public AlignedFeatureQuality findAlignedFeaturesQualityById(String alignedFeatureId) {
-        return storage().getByPrimaryKey(Long.parseLong(alignedFeatureId), QualityReport.class).map(this::convertToFeatureQuality)
-                .orElseThrow(() -> new ResponseStatusException(NOT_FOUND, "Not Quality information found for feature '" + alignedFeatureId + "' in project " + projectId + "."));
+        return convertToFeatureQuality(findQualityReportById(Long.parseLong(alignedFeatureId)));
     }
 
     @SneakyThrows
     @Override
     public Page<AlignedFeatureQuality> findAlignedFeaturesQuality(Pageable pageable) {
-        Stream<QualityReport> stream;
-        if (pageable.isUnpaged() && pageable.getSort().isUnsorted()) {
-            stream = storage().findAllStr(QualityReport.class);
-        } else {
-            Pair<String[], Database.SortOrder[]> sort = sortFeature(pageable.getSort());
-            stream = storage().findAllStr(QualityReport.class, pageable.getOffset(), pageable.getPageSize(), sort.getLeft(), sort.getRight());
+        return findPage(storage(), QualityReport.class, pageable)
+                .map(AnnotationUtils::convertToFeatureQuality);
+    }
+
+    @SneakyThrows
+    public QualityReport findQualityReportById(long alignedFeatureId) {
+        return storage().getByPrimaryKey(alignedFeatureId, QualityReport.class)
+                .orElseThrow(() -> new ResponseStatusException(NOT_FOUND, "Not Quality information found for feature '" + alignedFeatureId + "' in project " + projectId + "."));
+    }
+
+    @SneakyThrows
+    @Override
+    public Page<AlignedFeature> findAlignedFeatures(@Nullable String searchQuery, Pageable pageable, boolean msDataSearchPrepared, @NotNull EnumSet<AlignedFeature.OptField> optFields) {
+        if (searchService == null)
+            throw new ResponseStatusException(SERVICE_UNAVAILABLE, "Cannot perform search query. Search service not available!");
+
+        StopWatch w = StopWatch.createStarted();
+        Page<AlignedFeature> features = searchService.search(projectId, searchQuery, pageable, AlignedFeature.class);
+
+        System.out.println("Lucene search took: " + w);
+        w.reset();
+        w.start();
+
+        if (features.isEmpty())
+            return Page.empty(pageable);
+
+        if (!AlignedFeature.INDEXED_OPT_FIELDS.equals(optFields)) {
+            System.out.println("====> CORRECTING OPT FIELDS: " + AlignedFeature.INDEXED_OPT_FIELDS + "   VS   " + optFields);
+
+            features.stream().parallel().forEach(f ->
+                    annotateApiFeature(Long.parseLong(f.getAlignedFeatureId()), f, msDataSearchPrepared, optFields));
         }
 
-        List<AlignedFeatureQuality> features = stream.map(this::convertToFeatureQuality).toList();
+        return features;
+    }
 
-        long total = storage().countAll(QualityReport.class);
+    /**
+     * Find features paged
+     *
+     * @param pageable
+     * @param optFields
+     * @return
+     */
+    @SneakyThrows
+    @Override
+    public Page<AlignedFeature> findAlignedFeatures(Pageable pageable, boolean msDataAsCosineQuery, @NotNull EnumSet<AlignedFeature.OptField> optFields) {
+        List<AlignedFeature> features = annotateApiFeatures(
+                pageable.isUnpaged()
+                        ? storage().findAllStr(AlignedFeatures.class)
+                        : storage().findAllStr(AlignedFeatures.class, pageable.getOffset(), pageable.getPageSize()),
+                msDataAsCosineQuery,
+                optFields);
+
+        StopWatch w = new StopWatch();
+        w.start();
+
+        long total = pageable.isUnpaged() ? features.size() : storage().countAll(AlignedFeatures.class);
+
+        System.out.println("Counting features took: " + w);
 
         return new PageImpl<>(features, pageable, total);
     }
 
-    private AlignedFeatureQuality convertToFeatureQuality(QualityReport report) {
-        return AlignedFeatureQuality.builder()
-                .alignedFeatureId(String.valueOf(report.getAlignedFeatureId()))
-                .overallQuality(report.getOverallQuality())
-                .categories(report.getCategories())
-                .build();
+
+    private List<AlignedFeature> findAlignedFeaturesByIds(Collection<Long> featureIds, boolean msDataAsCosineQuery, @NotNull EnumSet<AlignedFeature.OptField> optFields) throws IOException {
+        return annotateApiFeatures(
+                storage().findStr(Filter.where("alignedFeatureId").in(featureIds.toArray(Long[]::new)), AlignedFeatures.class),
+                msDataAsCosineQuery,
+                optFields);
     }
 
-    @SneakyThrows
-    @Override
-    public Page<AlignedFeature> findAlignedFeatures(Pageable pageable, boolean msDataSearchPrepared, @NotNull EnumSet<AlignedFeature.OptField> optFields) {
-        List<AlignedFeature> features = findPageStr(AlignedFeatures.class, pageable, this::sortFeature)
-                .map(alf -> convertToApiFeature(alf, msDataSearchPrepared, optFields)).toList();
+    private List<AlignedFeature> annotateApiFeatures(@NotNull Stream<AlignedFeatures> apifeatures, boolean msDataAsCosineQuery, @NotNull EnumSet<AlignedFeature.OptField> optFields) {
+        StopWatch w = new StopWatch();
+        w.start();
 
-        long total = storage().countAll(AlignedFeatures.class);
+        //third
+        Long2ObjectOpenHashMap<AlignedFeatures> dbalf = apifeatures.collect(Collectors.toMap(AlignedFeatures::getAlignedFeatureId, Function.identity(),
+                (existing, replacement) -> existing, Long2ObjectOpenHashMap::new));
 
-        return new PageImpl<>(features, pageable, total);
-    }
+        System.out.println("FAST_FEATURES: Loading features took: " + w);
+        w.reset();
+        w.start();
 
-    @SneakyThrows
-    @Override
-    public List<de.unijena.bioinf.ms.middleware.model.features.Feature> findFeaturesByAlignedFeatureId(String alignedFeatureId) {
-        return storage().findStr(Filter.where("alignedFeatureId").eq(Long.parseLong(alignedFeatureId)), Feature.class).map(this::convertToApiFeature0).toList();
+        if (dbalf.isEmpty())
+            return List.of();
+
+        Long[] ids = dbalf.keySet().stream().sorted().toArray(Long[]::new);
+
+        System.out.println("FAST_FEATURES: Extract feature Ids took: " + w);
+        w.reset();
+        w.start();
+
+        TinyBackgroundJJob<Long2ObjectOpenHashMap<QualityReport>> qualJob = null;
+        if (optFields.contains(AlignedFeature.OptField.qualities)) {
+            Long[] filterIds = Arrays.stream(ids).filter(fid -> dbalf.get(fid).getDataQuality() != DataQuality.NOT_APPLICABLE).toArray(Long[]::new);
+            if (filterIds.length > 0) {
+                Filter qualFilter = Filter.where("alignedFeatureId").in(filterIds);
+                qualJob = SiriusJobs.runInBackground(() -> storage().findStr(qualFilter, QualityReport.class)
+                        .collect(Collectors.toMap(AlignedFeatureAnnotation::getAlignedFeatureId, c -> c
+                                , (existing, replacement) -> existing, Long2ObjectOpenHashMap::new
+                        )));
+            }
+        }
+
+
+        TinyBackgroundJJob<Long2ObjectOpenHashMap<ComputedSubtools>> compJob = null;
+        if (optFields.contains(AlignedFeature.OptField.computedTools) || optFields.contains(AlignedFeature.OptField.topAnnotationsSummary) || optFields.contains(AlignedFeature.OptField.topAnnotations)) {
+            compJob = SiriusJobs.runInBackground(() -> storage().findStr(Filter.where("alignedFeatureId").in(ids), ComputedSubtools.class)
+                    .collect(Collectors.toMap(AlignedFeatureAnnotation::getAlignedFeatureId, c -> c
+                            , (existing, replacement) -> existing, Long2ObjectOpenHashMap::new
+                    )));
+        }
+
+        TinyBackgroundJJob<Long2ObjectOpenHashMap<Map<String, Tag>>> tagJob = null;
+        if (optFields.contains(AlignedFeature.OptField.tags)) {
+            tagJob = SiriusJobs.runInBackground(() -> {
+                Filter.FilterClause tagfilter = Filter.and(
+                        Filter.where("taggedObjectClass").eq(AlignedFeatures.class.getName()),
+                        Filter.where("alignedFeatureId").in(ids)
+                );
+
+                final Long2ObjectOpenHashMap<Map<String, Tag>> tagmap = new Long2ObjectOpenHashMap<>();
+                storage().find(tagfilter, de.unijena.bioinf.ms.persistence.model.core.tags.Tag.class).forEach(tag ->
+                        tagmap.computeIfAbsent(tag.getTaggedObjectId(), id -> new HashMap<>())
+                                .put(tag.getTagName(), Tag.builder().tagName(tag.getTagName()).value(tag.getValue()).build()));
+                return tagmap;
+            });
+        }
+
+        TinyBackgroundJJob<Long2ObjectOpenHashMap<List<Statistics>>> statJob = null;
+        if (optFields.contains(AlignedFeature.OptField.topAnnotationsSummary)) {
+            statJob = SiriusJobs.runInBackground(() -> {
+                final Long2ObjectOpenHashMap<List<Statistics>> statsMap = new Long2ObjectOpenHashMap<>();
+                storage().find(Filter.where("alignedFeatureId").in(ids), de.unijena.bioinf.ms.persistence.model.core.statistics.FoldChange.AlignedFeaturesFoldChange.class)
+                        .forEach(foldChange ->
+                                statsMap.computeIfAbsent(foldChange.getAlignedFeatureId(), id -> new ArrayList<>())
+                                        .add(convertToApiFoldChange(foldChange)));
+                return statsMap;
+            });
+        }
+
+        @NotNull Long2ObjectOpenHashMap<QualityReport> quality = qualJob != null ? qualJob.getResult() : new Long2ObjectOpenHashMap<>();
+        @NotNull Long2ObjectOpenHashMap<ComputedSubtools> computed = compJob != null ? compJob.getResult() : new Long2ObjectOpenHashMap<>();
+        @NotNull Long2ObjectOpenHashMap<Map<String, Tag>> tags = tagJob != null ? tagJob.getResult() : new Long2ObjectOpenHashMap<>();
+        @NotNull Long2ObjectOpenHashMap<List<Statistics>> stats = statJob != null ? statJob.getResult() : new Long2ObjectOpenHashMap<>();
+
+
+        TinyBackgroundJJob<Long2ObjectOpenHashMap<CsiStructureSearchResult>> csiJob = null;
+        if (optFields.contains(AlignedFeature.OptField.topAnnotationsSummary) || optFields.contains(AlignedFeature.OptField.topAnnotations)) {
+            Long[] filterIds = Arrays.stream(ids).filter(computed::containsKey).filter(id -> computed.get(id).hasResults()).toArray(Long[]::new);
+            if (filterIds.length > 0) {
+                Filter resultFilter = Filter.where("alignedFeatureId").in(filterIds);
+
+                csiJob = SiriusJobs.runInBackground(() -> storage().findStr(resultFilter, CsiStructureSearchResult.class)
+                        .collect(Collectors.toMap(AlignedFeatureAnnotation::getAlignedFeatureId, c -> c
+                                , (existing, replacement) -> existing, Long2ObjectOpenHashMap::new
+                        )));
+            }
+        }
+
+        @NotNull Long2ObjectOpenHashMap<CsiStructureSearchResult> csires = csiJob != null ? csiJob.getResult() : new Long2ObjectOpenHashMap<>();
+
+        System.out.println("FAST_FEATURES: Extract BULK Annotations took: " + w);
+        w.reset();
+        w.start();
+
+
+        List<AlignedFeature> features = dbalf.values().stream()
+                .parallel()
+                .map(alf -> {
+                    long fid = alf.getAlignedFeatureId();
+                    AlignedFeature apiFeture = convertToApiFeature(alf, msDataAsCosineQuery, EnumSet.noneOf(AlignedFeature.OptField.class));
+                    apiFeture.setQualities(convertToQualityMap(quality.get(fid)));
+                    apiFeture.setComputedTools(computed.get(fid));
+                    apiFeture.setTags(tags.get(fid));
+                    apiFeture.setStats(stats.get(fid));
+                    if (optFields.contains(AlignedFeature.OptField.topAnnotationsSummary) && !optFields.contains(AlignedFeature.OptField.topAnnotations))
+                        apiFeture.setTopAnnotations(extractSearchIndexTopAnnotations(fid, csires.get(fid)));
+                    //add additional anotations that are not yes covered by bulk retrieval.
+                    annotateApiFeature(fid, apiFeture, msDataAsCosineQuery, optFields);
+                    return apiFeture;
+                }).toList();
+
+        System.out.println("FAST_FEATURES: Build API features and Extract per feature annotations: " + w);
+
+        return features;
     }
 
     /**
      * Imports features without compound grouping. Since grouping is unknown, each feature needs to belong to its own compound.
      * To group features as compounds together, please use add compounds instead.
-     * @param features the features to be imported into the project
-     * @param profile the instrument the features have been measured on.
+     *
+     * @param features  the features to be imported into the project
+     * @param profile   the instrument the features have been measured on.
      * @param optFields opt fields to be returned as part of the imported features/
      * @return imported features with selected opt fields and UUIDs for features and compounds.
      */
     @Override
     public List<AlignedFeature> addAlignedFeatures(@NotNull List<FeatureImport> features, @Nullable InstrumentProfile profile, @NotNull EnumSet<AlignedFeature.OptField> optFields, @NotNull String importSource) {
         List<CompoundImport> cis = features.stream().map(f -> CompoundImport.builder().name(f.getName()).features(List.of(f)).build()).toList();
-        return addCompounds(cis, profile, EnumSet.of(Compound.OptField.none), optFields, importSource).stream()
+        List<AlignedFeature> importedFeatures = addCompounds(cis, profile, EnumSet.of(Compound.OptField.none), optFields, importSource).stream()
                 .flatMap(c -> c.getFeatures().stream()).toList();
+        searchService.addDocuments(projectId, importedFeatures);
+        //todo fire import event?
+        return importedFeatures;
+    }
+
+    @SneakyThrows
+    @Override
+    public Page<AlignedFeature> findAlignedFeaturesByGroup(@NotNull String groupName, Pageable pageable, boolean msDataAsCosineQuery, @NotNull EnumSet<AlignedFeature.OptField> optFields) {
+        Optional<TagGroup> tagGroup = storage().findStr(Filter.where("groupName").eq(groupName), TagGroup.class).findFirst();
+        if (tagGroup.isEmpty())
+            return Page.empty(pageable);
+        return findAlignedFeatures(tagGroup.get().getLuceneQuery(), pageable, msDataAsCosineQuery, optFields);
     }
 
     @SneakyThrows
@@ -1491,28 +1912,52 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
     @Override
     public void deleteAlignedFeaturesById(String alignedFeatureId) {
         project().cascadeDeleteAlignedFeatures(Long.parseLong(alignedFeatureId));
+        //todo update index
     }
 
     @Override
     @SneakyThrows
     public void deleteAlignedFeaturesByIds(List<String> alignedFeatureIds) {
         project().cascadeDeleteAlignedFeatures(alignedFeatureIds.stream().map(Long::parseLong).sorted().toList());
+        //todo update index
+    }
+
+    @SneakyThrows
+    @Override
+    public List<de.unijena.bioinf.ms.middleware.model.features.Feature> findFeaturesByAlignedFeatureId(String alignedFeatureId) {
+        return storage().findStr(Filter.where("alignedFeatureId").eq(Long.parseLong(alignedFeatureId)), Feature.class).map(this::convertToApiFeature0).toList();
+    }
+
+
+    @SneakyThrows
+    @Override
+    public Page<Run> findRuns(@Nullable String searchQuery, Pageable pageable, @NotNull EnumSet<Run.OptField> optFields) {
+        if (searchQuery == null || searchQuery.isBlank())
+            return findRuns(pageable, optFields);
+
+        if (searchService == null)
+            throw new ResponseStatusException(SERVICE_UNAVAILABLE, "Cannot perform search query. Search service not available!");
+
+        // runs are fully indexed, we do not have to load anything from db.
+        return searchService.search(projectId, searchQuery, pageable, Run.class);
     }
 
     @SneakyThrows
     @Override
     public Page<Run> findRuns(Pageable pageable, @NotNull EnumSet<Run.OptField> optFields) {
-        long total;
-        List<Run> objects;
-        if (pageable.isUnpaged() && pageable.getSort().isUnsorted()) {
-            objects = storage().findAllStr(LCMSRun.class).map(run -> convertToApiRun(run, optFields)).toList();
-            total = objects.size();
-        } else {
-            Pair<String[], Database.SortOrder[]> sort = sortRun(pageable.getSort());
-            objects = storage().findAllStr(LCMSRun.class, pageable.getOffset(), pageable.getPageSize(), sort.getLeft(), sort.getRight()).map(run -> convertToApiRun(run, optFields)).toList();
-            total = storage().countAll(LCMSRun.class);
-        }
-        return new PageImpl<>(objects, pageable, total);
+        return findPage(storage(), LCMSRun.class, pageable)
+                .map(run -> convertToApiRun(run, optFields));
+    }
+
+    @SneakyThrows
+    @Override
+    public Page<Run> findRunsByGroup(@NotNull String groupName, Pageable pageable, @NotNull EnumSet<Run.OptField> optFields) {
+        Optional<de.unijena.bioinf.ms.persistence.model.core.tags.TagGroup> tagGroup = storage()
+                .findStr(Filter.where("groupName").eq(groupName), de.unijena.bioinf.ms.persistence.model.core.tags.TagGroup.class).findFirst();
+        if (tagGroup.isEmpty())
+            return Page.empty(pageable);
+
+        return findRuns(tagGroup.get().getLuceneQuery(), pageable, optFields);
     }
 
     @SneakyThrows
@@ -1523,56 +1968,7 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
                 .orElseThrow(() -> new ResponseStatusException(NOT_FOUND, "There is no run '" + runId + "' in project " + projectId + "."));
     }
 
-    private Page<Run> findRunsByFilter(Pageable pageable, Filter filter, EnumSet<Run.OptField> optFields) throws IOException {
-        long total;
-        List<Run> objects;
-        if (pageable.isUnpaged() && pageable.getSort().isUnsorted()) {
-            objects = storage().findStr(filter, LCMSRun.class)
-                    .map(run -> convertToApiRun(run, optFields)).toList();
-            total = objects.size();
-        } else {
-            Pair<String[], Database.SortOrder[]> sort = sortRun(pageable.getSort());
-            objects = storage().findStr(filter, LCMSRun.class, pageable.getOffset(), pageable.getPageSize(), sort.getLeft(), sort.getRight())
-                    .map(run -> convertToApiRun(run, optFields)).toList();
-            total = storage().count(filter, LCMSRun.class);
-        }
-
-        return new PageImpl<>(objects, pageable, total);
-    }
-
-    @SneakyThrows
-    @Override
-    @SuppressWarnings("unchecked")
-    public <T, O extends Enum<O>> Page<T> findObjectsByTagFilter(Class<?> target, @NotNull String luceneQuery, Pageable pageable, @NotNull EnumSet<O> optFields) {
-        Class<?> taggedObjectClass = convertToProjectObjectClass(target);
-
-        // find id field of tagged object.
-        AtomicReference<String> fieldName = new AtomicReference<>(null);
-        ReflectionUtils.doWithFields(
-                taggedObjectClass,
-                field -> fieldName.set(field.getName()),
-                field -> field.getAnnotation(Id.class) != null);
-        if (fieldName.get() == null)
-            throw new ResponseStatusException(INTERNAL_SERVER_ERROR, "No @Id field in " + taggedObjectClass);
-
-        Filter tagFilter;
-        try {
-            tagFilter = searchService.parseFindTagsByObjectType(getProjectId(), taggedObjectClass, luceneQuery);
-        } catch (Exception e) {
-            throw new ResponseStatusException(BAD_REQUEST, "Parse error: " + luceneQuery);
-        }
-
-        Long[] objectIds = storage().findStr(tagFilter, de.unijena.bioinf.ms.persistence.model.core.tags.Tag.class)
-                .map(de.unijena.bioinf.ms.persistence.model.core.tags.Tag::getTaggedObjectId).toArray(Long[]::new);
-
-        if (objectIds.length == 0)
-            return Page.empty();
-
-        Filter objectFilter = Filter.where(fieldName.get()).in(objectIds);
-        return (Page<T>) findRunsByFilter(pageable, objectFilter, (EnumSet<Run.OptField>) optFields);
-    }
-
-    private Class<?> convertToProjectObjectClass(Class<?> taggable) {
+    private Class<?> convertToProjectObjectClass(Class<? extends Taggable> taggable) {
         if (taggable.equals(Run.class))
             return LCMSRun.class;
 
@@ -1585,47 +1981,85 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
         throw new IllegalStateException("Unknown taggable: " + taggable);
     }
 
+    private Class<?> convertToApiObjectClass(Class<?> taggable) {
+        if (taggable.equals(LCMSRun.class))
+            return Run.class;
+
+        if (taggable.equals(de.unijena.bioinf.ms.persistence.model.core.Compound.class))
+            return Compound.class;
+
+        if (taggable.equals(AlignedFeatures.class))
+            return AlignedFeature.class;
+
+        throw new IllegalStateException("Unknown taggable: " + taggable);
+    }
+
     @Override
-    public List<Tag> addTagsToObject(Class<?> target, String objectId, List<Tag> tags) {
+    public List<Tag> addTagsToObject(Class<? extends Taggable> taggedObjectClass, String objectId, List<Tag> tags) {
+        addTagsToObjects(taggedObjectClass, Map.of(objectId, tags));
+        return findTagsByObject(taggedObjectClass, objectId);
+    }
+
+    @Override
+    public void addTagsToObjects(Class<? extends Taggable> taggedObjectClass, List<TagSubmission> tags) {
+        addTagsToObjects(taggedObjectClass, tags.stream().collect(Collectors.groupingBy(TagSubmission::getTaggedObjectId)));
+    }
+
+    private void addTagsToObjects(Class<? extends Taggable> taggedObjectClass, Map<String, ? extends Collection<? extends Tag>> objectToTags) {
         try {
-            Class<?> taggedObjectClass = convertToProjectObjectClass(target);
+            final Class<?> taggedProjectObjectClass = convertToProjectObjectClass(taggedObjectClass);
 
-            long objId = Long.parseLong(objectId);
-            if (!storage().containsPrimaryKey(objId, taggedObjectClass))
-                throw new ResponseStatusException(NOT_FOUND, "There is no object '" + objectId + "' in project " + projectId + ".");
-
+            Map<String, de.unijena.bioinf.ms.persistence.model.core.tags.TagDefinition> tagDefByName = new HashMap<>();
             List<de.unijena.bioinf.ms.persistence.model.core.tags.Tag> upsertTags = new ArrayList<>();
             List<de.unijena.bioinf.ms.persistence.model.core.tags.Tag> insertTags = new ArrayList<>();
 
-            for (Tag tag : tags) {
-                de.unijena.bioinf.ms.persistence.model.core.tags.TagDefinition tagDef = searchService.getTagDefinition(projectId, tag.getTagName());
+            StopWatch w = StopWatch.createStarted();
 
-                if (tagDef == null)
-                    throw new ResponseStatusException(NOT_FOUND, "There is no TagDefinition '" + tag.getTagName() + "' in project " + projectId + ".");
+            //todo add would be 20% faster if we would separate update an insert of tags to object.
+            //todo can be upsert without knowing the primary key?
+            for (Map.Entry<String, ? extends Collection<? extends Tag>> entry : objectToTags.entrySet()) {
+                long objId = Long.parseLong(entry.getKey());
+                if (!storage().containsPrimaryKey(objId, taggedProjectObjectClass))
+                    throw new ResponseStatusException(NOT_FOUND, "There is no object '" + objId + "' in project " + projectId + ".");
 
-                try {
-                    Filter.FilterClause filter = Filter.and(
-                            Filter.where("taggedObjectClass").eq(taggedObjectClass.getName()),
-                            Filter.where("taggedObjectId").eq(objId),
-                            Filter.where("tagName").eq(tag.getTagName())
-                    );
+                for (Tag tag : entry.getValue()) {
+                    de.unijena.bioinf.ms.persistence.model.core.tags.TagDefinition tagDef = tagDefByName.computeIfAbsent(tag.getTagName(), tagName -> project().findTagDefinitionByName(tagName).orElse(null));
 
-                    storage().findStr(filter, de.unijena.bioinf.ms.persistence.model.core.tags.Tag.class)
-                            .findFirst().ifPresentOrElse(existing ->
-                                            upsertTags.add(tagDef.setFormattedValueOfTag(existing, tag.getValue())),
-                                    () -> insertTags.add(tagDef.newTagWithFormattedValue(tag.getValue(), taggedObjectClass, objId)));
+                    if (tagDef == null)
+                        throw new ResponseStatusException(NOT_FOUND, "There is no TagDefinition '" + tag.getTagName() + "' in project " + projectId + ".");
 
-                } catch (IllegalArgumentException e) {
-                    throw new ResponseStatusException(BAD_REQUEST, "Forbidden value '" + tag.getValue() + " for TagDefinition " + tag.getTagName() + ".");
-                } catch (Exception e) {
-                    throw new ResponseStatusException(BAD_REQUEST, "Error when parsing tag. Wrong tag type '" + tag.getClass() + " for TagDefinition " + tag.getTagName() + ".");
+                    try {
+                        Filter.FilterClause filter = Filter.and(
+                                Filter.where("taggedObjectClass").eq(taggedProjectObjectClass.getName()),
+                                Filter.where("taggedObjectId").eq(objId),
+                                Filter.where("tagName").eq(tag.getTagName())
+                        );
+
+                        storage().findStr(filter, de.unijena.bioinf.ms.persistence.model.core.tags.Tag.class)
+                                .findFirst().ifPresentOrElse(
+                                        existing -> upsertTags.add(tagDef.setFormattedValueOfTag(existing, tag.getValue())),
+                                        () -> insertTags.add(tagDef.newTagWithFormattedValue(tag.getValue(), taggedProjectObjectClass, objId)));
+
+                    } catch (IllegalArgumentException e) {
+                        throw new ResponseStatusException(BAD_REQUEST, "Forbidden value '" + tag.getValue() + " for TagDefinition " + tag.getTagName() + ".");
+                    } catch (Exception e) {
+                        throw new ResponseStatusException(BAD_REQUEST, "Error when parsing tag. Wrong tag type '" + tag.getClass() + " for TagDefinition " + tag.getTagName() + ".");
+                    }
                 }
             }
+            if (!upsertTags.isEmpty())
+                storage().upsertAll(upsertTags);
+            if (!insertTags.isEmpty())
+                storage().insertAll(insertTags);
+            System.out.println("Added/Updated Tags To NITRITE in: " + w);
+            w.reset();
+            w.start();
 
-            storage().upsertAll(upsertTags);
-            storage().insertAll(insertTags);
+            if (searchService != null)
+                searchService.addTagsToDocuments(projectId, objectToTags, taggedObjectClass);
+            System.out.println("Added/Updated Tags To LUCENE in: " + w);
 
-            return Stream.concat(upsertTags.stream(), insertTags.stream()).map(tag -> convertToApiTag(tag)).toList();
+
         } catch (IOException e) {
             log.error("Error when assigning tags to Object", e);
             throw new ResponseStatusException(INTERNAL_SERVER_ERROR);
@@ -1634,47 +2068,48 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
 
     @SneakyThrows
     @Override
-    public void removeTagsFromObject(Class<?> taggedOobjectClass, String taggedObjectId, List<String> tagNames) {
+    public void removeTagsFromObject(Class<? extends Taggable> taggedOobjectClass, String taggedObjectId, List<String> tagNames) {
         storage().removeAll(Filter.and(
                 Filter.where("taggedObjectClass").eq(convertToProjectObjectClass(taggedOobjectClass).getName()),
                 Filter.where("taggedObjectId").eq(Long.parseLong(taggedObjectId)),
                 Filter.where("tagName").in(tagNames.toArray(String[]::new))
         ), de.unijena.bioinf.ms.persistence.model.core.tags.Tag.class);
+
+        //todo optimize performance / find better solution
+        searchService.removeTagsFromDocument(projectId, taggedObjectId, tagNames, (Class<? extends Taggable>) taggedOobjectClass);
     }
 
     @SneakyThrows
     @Override
     public List<TagDefinition> findTags() {
-        return searchService.getTagDefinitions(projectId).map(this::convertToApiDefinition).toList();
+        return project().findAllTagDefinitionsStr().map(this::convertToApiDefinition).collect(Collectors.toList());
     }
 
     @Override
-    public List<Tag> findTagsByObject(@NotNull Class<?> target, @NotNull String objectId) {
-        return findTagsByObject(target, Long.parseLong(objectId)).toList();
+    public List<Tag> findTagsByObject(@NotNull Class<? extends Taggable> taggedObjectClass, @NotNull String objectId) {
+        final Class<?> taggedProjectObjectClass = convertToProjectObjectClass(taggedObjectClass);
+        return findTagsByObject(taggedProjectObjectClass, Long.parseLong(objectId)).toList();
     }
 
-    public Stream<Tag> findTagsByObject(Class<?> target, long objectId) {
+    private Stream<Tag> findTagsByObject(Class<?> taggedProjectObjectClass, long objectId) {
         return project()
-                .findTagsForObject(target, objectId)
+                .findTagsForObject(taggedProjectObjectClass, objectId)
                 .map(this::convertToApiTag);
     }
 
     @SneakyThrows
     @Override
     public List<TagDefinition> findTagsByType(@NotNull String tagType) {
-        return searchService.getTagDefinitions(projectId)
-                .filter(tagDef -> tagType.equals(tagDef.getTagType()))
-                .map(this::convertToApiDefinition).toList();
+        return storage().findStr(Filter.where("tagType").eq(tagType), de.unijena.bioinf.ms.persistence.model.core.tags.TagDefinition.class)
+                .map(this::convertToApiDefinition).collect(Collectors.toList());
     }
 
     @SneakyThrows
     @Override
     public TagDefinition findTagByName(String tagName) {
-        de.unijena.bioinf.ms.persistence.model.core.tags.TagDefinition tagDef = searchService.getTagDefinition(projectId, tagName);
-        if (tagDef == null)
-            throw new ResponseStatusException(NOT_FOUND, "There is no tag definition '" + tagName + "' in project " + projectId + ".");
-
-        return convertToApiDefinition(tagDef);
+        return storage().findStr(Filter.where("tagName").eq(tagName), de.unijena.bioinf.ms.persistence.model.core.tags.TagDefinition.class)
+                .findFirst().map(this::convertToApiDefinition)
+                .orElseThrow(() -> new ResponseStatusException(NOT_FOUND, "There is no tag definition '" + tagName + "' in project " + projectId + "."));
     }
 
     @SneakyThrows
@@ -1687,7 +2122,9 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
                 .filter(tagDef -> !existingNames.contains(tagDef.getTagName()))
                 .map(tagDef -> convertToProjectDefinition(tagDef, editable)).toList();
         storage().insertAll(filtered);
-        storage().flush(); //flush to ensure search service cache is updated before returning.
+
+        // flushing ensures that related events have been sent before returning this method
+        storage().flush();
 
         return filtered.stream().map(this::convertToApiDefinition).toList();
     }
@@ -1695,7 +2132,8 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
     @SneakyThrows
     @Override
     public void deleteTags(String tagName) {
-        de.unijena.bioinf.ms.persistence.model.core.tags.TagDefinition tagDef = searchService.getTagDefinition(projectId, tagName);
+        de.unijena.bioinf.ms.persistence.model.core.tags.TagDefinition tagDef = storage().findStr(Filter.where("tagName").eq(tagName), de.unijena.bioinf.ms.persistence.model.core.tags.TagDefinition.class)
+                .findFirst().orElse(null);
         if (tagDef == null) {
             throw new ResponseStatusException(NOT_FOUND, "No such tag: " + tagName);
         }
@@ -1704,14 +2142,17 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
         }
         storage().removeAll(Filter.where("tagName").eq(tagName), de.unijena.bioinf.ms.persistence.model.core.tags.Tag.class);
         storage().remove(tagDef);
-        storage().flush(); //flush to ensure search service cache is updated before returning.
+        //todo optimize find different solution
+
+        searchService.removeTagValueType(projectId, tagName);
     }
 
     @SuppressWarnings("unchecked")
     @SneakyThrows
     @Override
     public TagDefinition addPossibleValuesToTagDefinition(String tagName, List<?> formattedPossibleValues) {
-        de.unijena.bioinf.ms.persistence.model.core.tags.TagDefinition tagDef = searchService.getTagDefinition(projectId, tagName);
+        de.unijena.bioinf.ms.persistence.model.core.tags.TagDefinition tagDef = storage().findStr(Filter.where("tagName").eq(tagName), de.unijena.bioinf.ms.persistence.model.core.tags.TagDefinition.class)
+                .findFirst().orElse(null);
         if (tagDef == null)
             throw new ResponseStatusException(NOT_FOUND, "No such tag: " + tagName);
 
@@ -1737,14 +2178,6 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
         return convertToApiDefinition(tagDef);
     }
 
-    @SneakyThrows
-    @Override
-    public <T, O extends Enum<O>> Page<T> findObjectsByTagGroup(Class<?> target, @NotNull String group, Pageable pageable, @NotNull EnumSet<O> optFields) {
-        Optional<de.unijena.bioinf.ms.persistence.model.core.tags.TagGroup> tagGroup = storage().findStr(Filter.where("groupName").eq(group), de.unijena.bioinf.ms.persistence.model.core.tags.TagGroup.class).findFirst();
-        if (tagGroup.isEmpty())
-            return Page.empty();
-        return findObjectsByTagFilter(target, tagGroup.get().getLuceneQuery(), pageable, optFields);
-    }
 
     @SneakyThrows
     @Override
@@ -1808,22 +2241,14 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
 
     @SneakyThrows
     @Override
-    public StatisticsTable getFoldChangeTable(Class<?> target, AggregationType aggregation, QuantMeasure quantification) {
+    public StatisticsTable getFoldChangeTable(QuantRowType statsTarget, AggregationType aggregation, QuantMeasure quantification) {
         StatisticsTable table = StatisticsTable.builder()
                 .statisticsType(StatisticsType.FOLD_CHANGE)
                 .quantificationMeasure(quantification)
                 .aggregationType(aggregation)
+                .rowType(statsTarget)
                 .build();
-
-        if (AlignedFeature.class.equals(target)) {
-            table.setRowType(QuantRowType.FEATURES);
-            fillFoldChangeTable(table, de.unijena.bioinf.ms.persistence.model.core.statistics.FoldChange.AlignedFeaturesFoldChange.class, aggregation, quantification);
-        } else if (Compound.class.equals(target)) {
-            table.setRowType(QuantRowType.COMPOUNDS);
-            fillFoldChangeTable(table, de.unijena.bioinf.ms.persistence.model.core.statistics.FoldChange.CompoundFoldChange.class, aggregation, quantification);
-        } else {
-            throw new ResponseStatusException(INTERNAL_SERVER_ERROR, "Type not supported: " + target);
-        }
+        fillFoldChangeTable(table, statsTarget.getProjectFoldChangeClass(), aggregation, quantification);
         return table;
     }
 
@@ -1860,93 +2285,59 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
     @SneakyThrows
     @Override
     @SuppressWarnings("unchecked")
-    public <F extends FoldChange> Page<F> listFoldChanges(Class<?> target, Pageable pageable) {
-        List<F> objects;
-        long total;
-        if (pageable.isUnpaged() && pageable.getSort().isUnsorted()) {
-            if (AlignedFeature.class.equals(target)) {
-                objects = (List<F>) storage()
-                        .findAllStr(de.unijena.bioinf.ms.persistence.model.core.statistics.FoldChange.AlignedFeaturesFoldChange.class)
-                        .map(this::convertToApiFoldChange)
-                        .toList();
-            } else if (Compound.class.equals(target)) {
-                objects = (List<F>) storage()
-                        .findAllStr(de.unijena.bioinf.ms.persistence.model.core.statistics.FoldChange.CompoundFoldChange.class)
-                        .map(this::convertToApiFoldChange)
-                        .toList();
-            } else {
-                throw new ResponseStatusException(INTERNAL_SERVER_ERROR, "Type not supported: " + target);
-            }
-            total = objects.size();
-        } else {
-            Pair<String[], Database.SortOrder[]> sort = sortRun(pageable.getSort());
-            if (AlignedFeature.class.equals(target)) {
-                objects = (List<F>) storage().findAllStr(
-                                de.unijena.bioinf.ms.persistence.model.core.statistics.FoldChange.AlignedFeaturesFoldChange.class,
-                                pageable.getOffset(), pageable.getPageSize(), sort.getLeft(), sort.getRight())
-                        .map(fc -> convertToApiFoldChange(fc))
-                        .toList();
-                total = storage().countAll(de.unijena.bioinf.ms.persistence.model.core.statistics.FoldChange.AlignedFeaturesFoldChange.class);
-            } else if (Compound.class.equals(target)) {
-                objects = (List<F>) storage().findAllStr(
-                                de.unijena.bioinf.ms.persistence.model.core.statistics.FoldChange.CompoundFoldChange.class,
-                                pageable.getOffset(), pageable.getPageSize(), sort.getLeft(), sort.getRight())
-                        .map(fc -> convertToApiFoldChange(fc))
-                        .toList();
-                total = storage().countAll(de.unijena.bioinf.ms.persistence.model.core.statistics.FoldChange.CompoundFoldChange.class);
-            } else {
-                throw new ResponseStatusException(INTERNAL_SERVER_ERROR, "Type not supported: " + target);
-            }
-        }
-
-        return new PageImpl<>(objects, pageable, total);
+    public Page<FoldChange> listFoldChanges(QuantRowType statsTarget, Pageable pageable) {
+        return findPage(storage(), statsTarget.getProjectFoldChangeClass(), pageable)
+                .map(fc -> convertToApiFoldChange(fc, statsTarget));
     }
 
     @SneakyThrows
     @Override
     @SuppressWarnings("unchecked")
-    public <F extends FoldChange> List<F> getFoldChanges(Class<?> target, String objectId) {
-        if (AlignedFeature.class.equals(target)) {
-            return (List<F>) storage()
-                    .findStr(Filter.where("alignedFeatureId").eq(Long.parseLong(objectId)), de.unijena.bioinf.ms.persistence.model.core.statistics.FoldChange.AlignedFeaturesFoldChange.class)
-                    .map(this::convertToApiFoldChange)
-                    .toList();
-        } else if (Compound.class.equals(target)) {
-            return (List<F>) storage()
-                    .findStr(Filter.where("compoundId").eq(Long.parseLong(objectId)), de.unijena.bioinf.ms.persistence.model.core.statistics.FoldChange.CompoundFoldChange.class)
-                    .map(this::convertToApiFoldChange)
-                    .toList();
-        } else {
-            throw new ResponseStatusException(INTERNAL_SERVER_ERROR, "Type not supported: " + target);
-        }
+    public List<FoldChange> getFoldChanges(QuantRowType statsTarget, String objectId) {
+        return storage()
+                .findStr(Filter.where(statsTarget.getTargetIdFieldName()).eq(Long.parseLong(objectId)), statsTarget.getProjectFoldChangeClass())
+                .map(fc -> convertToApiFoldChange(fc, statsTarget))
+                .collect(Collectors.toList());
     }
+
 
     @SneakyThrows
     @Override
-    public void deleteFoldChange(Class<?> target, String left, String right, AggregationType aggregation, QuantMeasure quantification) {
-        if (AlignedFeature.class.equals(target)) {
-            storage().removeAll(
-                    Filter.and(
-                            Filter.where("leftGroup").eq(left),
-                            Filter.where("rightGroup").eq(right),
-                            Filter.where("aggregation").eq(aggregation.toString()),
-                            Filter.where("quantification").eq(quantification.toString())
-                    ),
-                    de.unijena.bioinf.ms.persistence.model.core.statistics.FoldChange.AlignedFeaturesFoldChange.class
-            );
-        } else if (Compound.class.equals(target)) {
-            storage().removeAll(
-                    Filter.and(
-                            Filter.where("leftGroup").eq(left),
-                            Filter.where("rightGroup").eq(right),
-                            Filter.where("aggregation").eq(aggregation.toString()),
-                            Filter.where("quantification").eq(quantification.toString())
-                    ),
-                    de.unijena.bioinf.ms.persistence.model.core.statistics.FoldChange.CompoundFoldChange.class
-            );
-        } else {
-            throw new ResponseStatusException(INTERNAL_SERVER_ERROR, "Type not supported: " + target);
+    public void deleteFoldChange(QuantRowType statsTarget, String left, String right, AggregationType aggregation, QuantMeasure quantification) {
+        Map<String, List<FoldChange>> foldChanges = new HashMap<>();
+        List<Long> toDelete = new ArrayList<>();
+
+        //finde folc changes to delte
+        storage().find(
+                Filter.and(
+                        Filter.where("leftGroup").eq(left),
+                        Filter.where("rightGroup").eq(right),
+                        Filter.where("aggregation").eq(aggregation.toString()),
+                        Filter.where("quantification").eq(quantification.toString())
+                ),
+                statsTarget.getProjectFoldChangeClass()).forEach(fc -> {
+            toDelete.add(fc.getId());
+            FoldChange apiFc = convertToApiFoldChange(fc, statsTarget);
+            foldChanges.computeIfAbsent(apiFc.getObjectId(), s -> new ArrayList<>()).add(apiFc);
+        });
+
+       // delete fold changes from index.
+       switch (statsTarget) {
+            case FEATURES -> searchService.updateDocumentsFields(projectId, foldChanges.keySet(), af -> {
+                if (af.getStats() != null)
+                    af.getStats().removeAll(foldChanges.get(af.getAlignedFeatureId()));
+            }, AlignedFeature.class);
+            case COMPOUNDS -> searchService.updateDocumentsFields(projectId, foldChanges.keySet(), af -> {
+                if (af.getStats() != null)
+                    af.getStats().removeAll(foldChanges.get(af.getCompoundId()));
+            }, Compound.class);
+            default -> throw new IllegalArgumentException("Unknown fold change target!");
         }
+
+        //delete fold changes from db
+        storage().removeAll(
+                Filter.where("id").in(toDelete.toArray(Long[]::new)),
+                statsTarget.getProjectFoldChangeClass());
     }
 
     private SpectralLibraryMatchSummary summarize(Filter filter) throws IOException {
@@ -1991,19 +2382,7 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
     }
 
     private Page<SpectralLibraryMatch> findLibMatches(Filter filter, Pageable pageable) throws IOException {
-        Pair<String[], Database.SortOrder[]> sort = sortMatch(pageable.getSort());
-
-        Stream<SpectraMatch> matches;
-        if (pageable.isPaged()) {
-            matches = storage().findStr(filter, SpectraMatch.class, pageable.getOffset(), pageable.getPageSize(), sort.getLeft(), sort.getRight()
-            );
-        } else {
-            matches = storage().findStr(filter, SpectraMatch.class, sort.getLeft(), sort.getRight());
-        }
-
-        long total = storage().count(filter, SpectraMatch.class);
-
-        return new PageImpl<>(matches.map(SpectralLibraryMatch::of).toList(), pageable, total);
+        return findPage(storage(), SpectraMatch.class, pageable, filter).map(SpectralLibraryMatch::of);
     }
 
     @SneakyThrows
@@ -2168,6 +2547,7 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
         return sSum;
     }
 
+    @SneakyThrows
     private StructureCandidateFormula convertStructureMatch(StructureMatch match, EnumSet<StructureCandidateScored.OptField> optFields) {
         final StructureCandidateFormula sSum = new StructureCandidateFormula();
         //FP
@@ -2178,7 +2558,7 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
             sSum.setFingerprint(AnnotationUtils.asBinaryFingerprint(match.getCandidate().getFingerprint()));
 
         if (optFields.contains(StructureCandidateScored.OptField.structureSvg))
-                sSum.setStructureSvg(Spectrums.smilesToSVGSilent(match.getCandidate().getSmiles()));
+            sSum.setStructureSvg(Spectrums.smilesToSVGSilent(match.getCandidate().getSmiles()));
 
         sSum.setFormulaId(String.valueOf(match.getFormulaId()));
         sSum.setRank(match.getStructureRank());
@@ -2208,7 +2588,13 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
 
         // spectral library matches
         if (optFields.contains(StructureCandidateScored.OptField.libraryMatches)) {
-            List<SpectralLibraryMatch> libraryMatches = project().findByInChIStr(sSum.getInchiKey(), SpectraMatch.class)
+            /// Index:
+            /// "alignedFeatureId", "searchResult.candidateInChiKey", "searchResult.rank"
+            List<SpectralLibraryMatch> libraryMatches = storage().findStr(
+                            Filter.and(
+                                    Filter.where("alignedFeatureId").eq(match.getAlignedFeatureId()),
+                                    Filter.where("searchResult.candidateInChiKey").eq(sSum.getInchiKey())
+                            ), SpectraMatch.class)
                     .map(SpectralLibraryMatch::of).toList();
             sSum.setSpectralLibraryMatches(libraryMatches);
         }
@@ -2326,20 +2712,5 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
     @Override
     public Optional<ProjectSourceFormats> getProjectSourceFormats() {
         return project().findProjectSourceFormats();
-    }
-
-    private <T> Stream<T> findPageStr(Class<T> clz, Pageable pageable, Function<Sort,
-            Pair<String[], Database.SortOrder[]>> sortTransformer
-    ) throws IOException {
-        if (pageable.isUnpaged() && pageable.getSort().isUnsorted())
-            return storage().findAllStr(clz);
-        if (pageable.getSort().isUnsorted())
-            return storage().findAllStr(clz, pageable.getOffset(), pageable.getPageSize());
-
-        Pair<String[], Database.SortOrder[]> sort = sortTransformer.apply(pageable.getSort());
-        if (pageable.isUnpaged())
-            return storage().findAllStr(clz, sort.getLeft(), sort.getRight());
-
-        return storage().findAllStr(clz, pageable.getOffset(), pageable.getPageSize(), sort.getLeft(), sort.getRight());
     }
 }
